--- a/k8s/overlays/testing/flask-deploy-patch.yaml
+++ b/k8s/overlays/testing/flask-deploy-patch.yaml
@@ -18,7 +18,7 @@ spec:
               memory: "512Mi"
           readinessProbe:
             httpGet:
-              path: /
+              path: /flask/readiness
               port: 5002
             initialDelaySeconds: 30
             periodSeconds: 10
@@ -26,7 +26,7 @@ spec:
             failureThreshold: 3
           livenessProbe:
             httpGet:
-              path: /
+              path: /flask/healthz
               port: 5002
             initialDelaySeconds: 60
             periodSeconds: 15
